# osdev

./: .clang-format  .clang-tidy  .clangd  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bochsrc.txt  boot.asm  boot.s  config.ini  configpxe.ini  configure  grub.cfg  hello.c  linker.ld  menu.ipxe  packages-x11.yaml  packages.yaml  software.make  toolchain.make
apps/: Makefile  Makefile.m4
boot/: Config.c  File.c  FwCfg.c  Loader.c  Loader.inf  LoaderPkg.dsc  Main.c  Makefile  Memory.c  System.c  Video.c  data.c  efi.c  entry.asm  lib.h  print.asm  util.asm
docs/: ext2.txt  ramdisk.txt  todo.txt  vendor.ids
drivers/: Makefile  ahci.c  asm.s  ata.c  ata_dma.c  ata_pio.c  framebuf.c  keyboard.c  memory.c  ramdisk.c  rawmem.c  rtc.c  screen.c  serial.c  serial.h  uart.c  uart.h
etc/: fvwmrc  inittab  passwd  profile  rc  twmrc
fs/: Makefile  acl.c  bdev.c  blkdev.c  cdev.c  chrdev.c  dcache.c  dentry.c  device.c  dirent.c  file.c  framebuf.c  fs.c  inode.c  path.c  stat.c  super.c  utils.c  vfs.c
include/: base.h  base.inc  boot.h  efi.h  elf.h  elf64.h  math.h  multiboot.h  stdio.h  stdlib.h  string.h  types.h
kernel/: Makefile  acpi.c  alarm.c  boot.asm  chan.c  clock.c  cond.c  console.c  dev.c  device.c  entry.asm  errno.c  event.c  exception.asm  exec.c  fs_utils.c  futex.c  init.c  input.c  ipc.c  ipi.c  irq.c  isr.asm  kernel.c  kevent.c  kio.c  loadelf.c  loader.c  lock.c  main.c  memory.asm  mutex.c  panic.c  params.c  percpu.c  printf.c  proc.c  process.c  queue.c  rwlock.c  (+24 more)
klibc/: Makefile  errno.h  string.c
lib/: Makefile  atomic.c  atomic.h  bitmap.c  bitmap.h  format.c  format.h  hash_map.h  hash_table.c  hash_table.h  hashtable.c  hashtable.h  interval.h  interval_tree.c  interval_tree.h  interval_tree_v2.c  interval_tree_v2.h  list.c  list.h  lock.c  lock.h  macros.h  murmur3.c  murmur3.h  queue.c  queue.h  rb_tree.c  rb_tree.h  rb_tree_v2.c  rb_tree_v2.h  ringbuf.c  ringbuf.h  segment_tree.c  segment_tree.h  sort.c  sort.h
(+645 files in other folders)
